CVS code -
- General:
	- More minor comment cleanups. (DLR)
	- Convert more ints used as boolean values to use TRUE and
	  FALSE. (David Benbennick and DLR)
	- Change more instances of ints that can never be negative to
	  size_t's. (DLR)
	- Convert the shortcut list functions and most related functions
	  to return void instead of int, as the return values of all
	  those functions are essentially unused.  Changes to
	  sc_init_one(), shortcut_init(), etc. (David Benbennick and
	  DLR)
	- Make flags and all variables meant to store the value of flags
	  longs for consistency. (David Benbennick)
	- Rename the TEMP_OPT flags to TEMP_FILE, as it's more 
	  descriptive. (DLR)
	- Remove unused global variable search_offscreen. (David
	  Benbennick)
	- Add new N_() macro to mark strings that aren't translated
	  immediately, and convert nano to use it in cases where the
	  same translated string is stored in a const char* and used
	  more than once. (David Benbennick)  DLR: Do this for the
	  toggles list for consistency with the shortcut list.
	- Overhaul the shortcut list and toggle list initialization
	  code for efficiency.  Changes to shortcut_init() and
	  toggle_init(). (David Benbennick)  DLR: Move "Cancel" to just
	  after "Get Help" in the file browser list, for consistency
	  with all the other lists, have the replace list accept all the
	  same function keys as the search list, and clarify a few
	  shortcut descriptions.
	- Convert nano to use the new parse_num() function to read in
	  numeric values at the command line and in the rcfile, and
	  duplicate the messages used in the rcfile in the command line
	  for consistency. (David Benbennick)  DLR: Convert tabsize,
	  wrap_at, and fill to ssize_t in order to work with
	  parse_num() properly and also to increase their capacity
	  while keeping the ability to hold negative numbers in case of
	  errors.  Also exit instead of calling usage() in the event of